[gd_scene load_steps=2 format=3 uid="uid://cr8xh3kc8woma"]

[ext_resource type="Script" uid="uid://iw2fqlmam0ly" path="res://scripts/Control.gd" id="1_tgwut"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tgwut")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 328.0
offset_bottom = 183.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Name"

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
placeholder_text = "Anonymous"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Character"

[node name="StatusLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
placeholder_text = "Unknown"

[node name="UpdateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Update"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -116.0
offset_right = 172.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlaySoloButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Play Solo"

[node name="GroupUpButoon" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Group up"

[node name="Tutorial" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Tutorial
"

[node name="PlayIA" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Play vs IA"

[node name="LogoutButton" type="Button" parent="."]
layout_mode = 2
offset_left = 770.0
offset_top = 25.0
offset_right = 1120.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 34
text = "Logout"

[node name="PlayerListLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 20.0
offset_top = 134.0
offset_right = 353.0
offset_bottom = 350.0
text = "Players' status:
"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="VBoxContainer/UpdateButton" to="." method="_on_update_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/PlaySoloButton" to="." method="_on_play_solo_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/GroupUpButoon" to="." method="_on_group_up_butoon_pressed"]
[connection signal="pressed" from="VBoxContainer2/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer2/PlayIA" to="." method="_on_play_ia_pressed"]
[connection signal="pressed" from="LogoutButton" to="." method="_on_logout_button_pressed"]
